--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 
         <pre id='console'></pre>
     </body>
-    <script type='module' src='./alert.mjs'></script>
+    <script type='module' src='./alert.js'></script>
 </html>
