--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
     <head>
         <meta charset='utf-8'>
         <title>PSFree-Lapse Exploit For PS4 9.00</title>
-        
+        <style>
+            @font-face {
+                font-family: 'logging';
+                src: url('fonts/LiberationMono-Regular.ttf');
+            }
+            #console {
+                font-family: 'logging';
+            }
+        </style>
         <script>
         if (window.applicationCache.status=='0')
         {
@@ -13,7 +21,9 @@
     <body>
         PSFree: A PS4/PS5 Exploit Chain
         <br>
-
+        <br>
+        See <a href='./about.html' data-jslicense='1'>JavaScript license information</a> for the
+        source code and license.<br>
         <pre id='console'></pre>
     </body>
     <script type='module' src='./alert.js'></script>
