--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ along with this program.  If not, see https://www.gnu.org/licenses/.
         PSFree: A PS4/PS5 Exploit Chain
         <br><br>
 
+        <div id="estadoXploit" style="font-size:24px; font-weight:bold;">
+        Activando exploit...
+        </div>
+
         See <a href="#" data-jslicense="1">JavaScript license information</a> for the
         source code and license.<br>
 
