--- a/index.html
+++ b/index.html
@@ -1,52 +1,70 @@
-<!-- Copyright (C) 2023-2025 anonymous
-
-This file is part of PSFree.
-
-PSFree is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as
-published by the Free Software Foundation, either version 3 of the
-License, or (at your option) any later version.
-
-PSFree is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see https://www.gnu.org/licenses/.
--->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>PSFree-Lapse Exploit For PS4 9.00</title>
+<head>
+    <meta charset="utf-8">
+    <title>PSFree | 9.00</title>
 
-        <style>
-            /* Ocultar por completo la consola */
-            #console {
-                display: none !important;
-            }
-        </style>
+    <style>
+        body {
+            background-color: #063FAB; /* Fondo azul estilo PS */
+            color: white;
+            font-size: 28px;
+            text-align: center;
+            margin: 0;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+        }
 
-        <script>
-        if (window.applicationCache.status=='0') {
+        /* Ocultar la consola interna del exploit */
+        #console {
+            display: none !important;
+        }
+
+        .content {
+            position: relative;
+            top: 20%; 
+        }
+
+        /* Mensaje principal */
+        #estadoXploit {
+            font-size: 35px;
+            font-weight: bold;
+            text-shadow: 3px 2px #3d3939;
+            margin-top: 40px;
+        }
+
+        /* Logo grande PS */
+        .shared-nav-ps-logo {
+            width: 250px;
+            height: auto;
+        }
+    </style>
+
+    <script>
+        if (window.applicationCache.status == '0') {
             window.location.replace("cache.html");
         }
-        </script>
-    </head>
+    </script>
+</head>
+<body>
 
-    <body>
-        PSFree: A PS4/PS5 Exploit Chain
-        <br><br>
+    <!-- Consola del exploit (oculta) -->
+    <pre id="console"></pre>
 
-        <div id="estadoXploit" style="font-size:24px; font-weight:bold;">
-        Activando exploit...
-        </div>
+    <div class="content">
 
-        See <a href="#" data-jslicense="1">JavaScript license information</a> for the
-        source code and license.<br>
+        <!-- Logo Playstation en SVG -->
+        <svg class="shared-nav-ps-logo" xmlns="http://www.w3.org/2000/svg" 
+             viewBox="4.3 9.5 41.1 31">
+            <path d="M5.8 32.1c-1.5 1-1 2.9 2.2 3.8 3.3 1.1 6.9 1.4 10.4.8.2 0 .4-.1.5-.1v-3.4l-3.4 1.1c-1.3.4-2.6.5-3.9.2-1-.3-.8-.9.4-1.4l6.9-2.4V27l-9.6 3.3c-1.2.4-2.4 1-3.5 1.8zm23.2-15v9.7c4.1 2 7.3 0 7.3-5.2 0-5.3-1.9-7.7-7.4-9.6C26 11 23 10.1 20 9.5v28.9l7 2.1V16.2c0-1.1 0-1.9.8-1.6 1.1.3 1.2 1.4 1.2 2.5zm13 12.7c-2.9-1-6-1.4-9-1.1-1.6.1-3.1.5-4.5 1l-.3.1v3.9l6.5-2.4c1.3-.4 2.6-.5 3.9-.2 1 .3.8.9-.4 1.4l-10 3.7V40L42 34.9c1-.4 1.9-.9 2.7-1.7.7-1 .4-2.4-2.7-3.4z" 
+                  fill="white"/>
+        </svg>
 
-        <pre id="console"></pre>
-    </body>
+        <!-- Mensaje dinámico: será cambiado por lapse.js -->
+        <div id="estadoXploit">Activando exploit, espere...</div>
 
+    </div>
+
+    <!-- Scripts del exploit -->
     <script type="module" src="./alert.js"></script>
+</body>
 </html>
